<resources>
  <string name="app_name">PangurBan</string>
  <string name="login_register">登陆，或注册</string>
  <string name="login">登陆</string>
  <string name="register">注册</string>
  <string name="input_user_name">输入用户名</string>
  <string name="input_password">输入密码</string>
  <string name="confirm_password">确认密码</string>
  <string name="cancel_operation">取消</string>
  <string name="send_request">提交</string>
  <string name="user_id_invalid">用户名重复</string>
  <string name="error_id_exist">账户已经存在</string>
  <string name="error_id_password_incorrect">账户名或密码错误</string>
  <string name="error_password_not_the_same">密码不一致</string>
  <string name="incomplete_info">资料未完善</string>
</resources>
