<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

  <LinearLayout android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent"
              android:id="@+id/textView_select_login"
              android:layout_weight="1"
              android:text="@string/login"
              android:layout_height="match_parent"
              android:autoSizeMaxTextSize="20dp"
              android:textAlignment="center" android:textSize="24sp"/>
    <TextView android:layout_width="match_parent"
              android:layout_weight="1"
              android:id="@+id/textView_select_register"
              android:text="@string/register"
              android:layout_height="match_parent" android:textAlignment="center"
              android:textSize="24sp"/>
  </LinearLayout>

  <EditText android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/editText_input_user_id"
            android:hint="@string/input_user_name"
            android:layout_height="wrap_content"/>


  <EditText android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/editText_input_password"
            android:hint="@string/input_password"
            android:layout_height="wrap_content"/>


  <EditText android:layout_width="match_parent"
            android:id="@+id/editText_confirm_password"
            android:visibility="gone"
            android:hint="@string/confirm_password"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

  <LinearLayout android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content">
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/error_hint"
              android:textColor="@android:color/holo_red_light"/>
    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_request"
            android:id="@+id/button_send_request"/>

  </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>